# ROOT-Analyzer

./: .gitattributes  .gitignore  README.md  milestone_1.ipynb  pyproject.toml  report.ipynb
data/: README.md
data/game_data/: .gitignore  board_info.json
scripts/: rotate.py  split.py  track.py
src/: Event.py  Tracked_Object.py  file_reading.py  gen_tracking_videos.py  getFirstFrame.py  get_first_frame.py  resize_data.py  rotate.py  split_data.py  utils.py
src/detection/: Detected_Object.py  detection.py  elements.py  game.py
src/tracking/: Board.py  Buildings.py  Card.py  Dice.py  Event.py  Pawns.py  ScoreBoard.py  StaticObject.py  TrackedObject.py  Tracked_Object.py  __init__.py  algorithms.py
src/utils/: contours.py  data.py  helpers.py  images.py
src/viz/: graphs.py  images.py
