[tool.poetry]
name = "root-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "."}
]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pymupdf = "^1.23.8"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
moviepy = "^1.0.3"
networkx = "^3.2.1"
scikit-learn = "^1.3.2"
opencv-contrib-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
